--- a/list/templates/list.html
+++ b/list/templates/list.html
@@ -1,18 +1,72 @@
 {% extends "index.html" %}
 {%block content%}
+<style>
+  .container{
+    display:grid;
+    place-items: center;
+    border: 1px solid lightgray;
+    border-radius: 10px;
+  }
+  .newElement{
+    padding:5px;
+    border:1px solid #00b74a;
+    border-radius:3px;
+    background-color: #00b74a;
+    text-align: center;
+  }
+  .updateElement{
+    padding:5px;
+    border:1px solid #1266f1;
+    border-radius:3px;
+    background-color: #1266f1;
+    text-align: center;
+  }
+  .deleteElement{
+    padding:5px;
+    border:1px solid #f93154;
+    border-radius:3px;
+    background-color: #f93154;
+    text-align: center;
+  }
+  .textElement{
+    margin-top: 1.3%;
+  }
+  a{
+    color:white;
+    text-decoration: none;
+  }
+  a:hover{
+    color:white;
+    text-decoration: none;
+  }
+  li{
+    display: flex;
+    margin:10px;
+    width:90%;
+    border-bottom: 1px solid lightgray;
+  }
+  li > *{
+    margin:5px;
+  }
+
+</style>
 <div class="container">
-    <div class="row justify-content-center">
-      <h3>To do:</h3>
-      <ol>
-        {% for item in items %}
-        <li>
-          {{item}}
-          <a href="{% url 'update_item' item.id %}">Update Task</a>
-        </li>
-        {% endfor %}
-        <a href="{% url 'new_item' %}">Add new Task</a>
-        
-      </ol>
+    <h3>To do:</h3>
+    <div class="newElement">
+      <a href="{% url 'new_item' %}">Add new Task</a>
     </div>
+    <ol>
+      {% for item in items %}
+      <li>
+        <div class="textElement">{{item}}</div>
+        <div class="updateElement">
+          <a href="{% url 'update_item' item.id %}">Update</a>
+        </div>
+        <div class="deleteElement">
+          <a href="{% url 'update_item' item.id %}">Delete</a>
+        </div>
+      </li>
+      {% endfor %}
+    </ol>
   </div>
 {% endblock %}
