fixed add button

--- a/list/templates/list.html
+++ b/list/templates/list.html
@@ -28,6 +28,11 @@
               </li>
               {% endfor %}
           </ol>
+          <div style="width: 100%; text-align: center; padding:1%;">
+            <a href="{% url 'new_item' %}">
+                <button type="button" class="btn btn-success">Add New Task</button>
+            </a>
+        </div>
       </div>
   </div>
 </div>
