--- a/list/templates/list.html
+++ b/list/templates/list.html
@@ -1,6 +1,6 @@
 {% extends "index.html" %}
 {% block style %}
-<link rel="stylesheet" href="static/css/listStyle.css">
+<link rel="stylesheet" href="static/listStyle.css">
 {% endblock %}
 {%block content%}
 
